Project

General

Profile

Actions

Bug #13772

closed

Memory leak recycling stacks for threads in 2.4.1

Bug #13772: Memory leak recycling stacks for threads in 2.4.1

Added by sam.saffron (Sam Saffron) about 9 years ago. Updated about 9 years ago.

Status:
Closed
Target version:
-
[ruby-core:82183]

Description

Per:

https://github.com/rest-client/rest-client/issues/611

gem install rest-client

100000.times.each_slice(32) do |slice|
    slice.map { Thread.new { RestClient.get('echo.jsontest.com/key/value/one/two') } }.each(&:join)
    GC.start(full_mark: true, immediate_sweep: true)
    slots = GC.stat[:heap_live_slots]
    puts "slots #{slots} #{i+=1} threads #{Thread.list.count}"

end

Causes unbound memory growth on 2.4.1, this was not the case in earlier versions of Ruby or Ruby master.

When running through heaptrack and massif-visualizer it looks like all unreclaimed allocations come from thread_recycle_stack

Ruby heaps do not grow during tests, all the growth is around unmanaged memory.

I feel getting this sorted is urgent, we have seen similar leaks at Discourse.


Related issues 2 (0 open — 2 closed)

Related to Ruby - Feature #12628: change block/env structsClosedko1 (Koichi Sasada)Actions
Related to Ruby - Bug #13775: Ruby hangs when calling scope and belongs_to many times (with mongomapper)ClosedActions
Actions

Also available in: PDF Atom